# kr-exchange-airdrop-bot

./: .env.sample  .gitignore  README.md  pyproject.toml  run_background.sh  run_bithumb_airdrop_background.sh  stop_background.sh  stop_bithumb_airdrop_background.sh
src/: airdrop_event.py  main.py
src/bithumb_airdrop_bot/: __init__.py  __main__.py  bot.py  cli.py  logging_config.py
src/bithumb_airdrop_bot/clients/: __init__.py  base.py  bithumb_client.py
src/exchange_event/: __init__.py  __main__.py  airdrop_event.py  cli.py  logging_config.py  types.py
src/exchange_event/exchanges/: __init__.py  base.py  bithumb.py
src/exchanges/: base.py  bithumb.py  upbit.py
tests/: conftest.py  test_account_loading.py  test_airdrop_bot_small_holdings.py  test_bithumb_account_loading.py  test_bithumb_bot_single_participation.py  test_bithumb_bot_small_holdings.py  test_bithumb_exchange.py  test_bithumb_exchange_client.py  test_participate_event_single.py
